LPS-89014 | LPS-90826 Build lang

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=وقت مدة المطلوبة. (Automatic Translation)
 a-name-is-required=اسم مطلوب. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=اتفاقية مستوى الخدمة بنفس الاسم موجود مسبقاً. (Automatic Translation)
+check-sla-job-interval=التحقق من جيش تحرير السودان وظيفة الفاصل الزمني (Automatic Translation)
+check-sla-job-interval-description=تعيين الفاصل الزمني للعمل في غضون دقائق. (Automatic Translation)
 entries=إدخالات (Automatic Translation)
 items=العناصر (Automatic Translation)
 metrics=المقاييس (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=اسم العملية (Automatic Translation)
 search-for=البحث عن... (Automatic Translation)
 showing=عرض (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=يجب أن يكون الفاصل الزمني وظيفة أكبر من 0. (Automatic Translation)
 total-open=فتح إجمالي (Automatic Translation)
+workflow-metrics-configuration-name=مقاييس سير العمل (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
