--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_bg.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Продължителност време е необходимо. (Automatic Translation)
 a-name-is-required=Името е задължително. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA със същото име вече съществува. (Automatic Translation)
+check-sla-job-interval=Проверете SLA работа интервал (Automatic Translation)
+check-sla-job-interval-description=Задаване на работа интервал в минути. (Automatic Translation)
 entries=Записи (Automatic Translation)
 items=Елементи (Automatic Translation)
 metrics=Показатели (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Име на процес (Automatic Translation)
 search-for=Търсене за... (Automatic Translation)
 showing=Показване (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Интервалът на работа трябва да бъде по-голямо от 0. (Automatic Translation)
 total-open=Общо отворено (Automatic Translation)
+workflow-metrics-configuration-name=Показателите за работен поток (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
