--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Cal especificar una durada.
 a-name-is-required=Cal un nom.
 an-sla-with-the-same-name-already-exists=Ja existeix un SLA amb el mateix nom.
+check-sla-job-interval=Comprovar SLA feina Interval (Automatic Translation)
+check-sla-job-interval-description=Configurar l'interval de feina en minuts. (Automatic Translation)
 entries=Entrades
 items=Elements
 metrics=Analítica web
@@ -16,6 +18,8 @@ process-name=Nom del procés
 search-for=Cerca...
 showing=Mostrant
 showing-x-to-x-of-x-entries=Mostrant de la {0} a la {1} de {2} entrades.
+the-job-interval-must-be-greater-than-0=L'interval de feina ha de ser major que 0. (Automatic Translation)
 total-open=Total obert
+workflow-metrics-configuration-name=Indicadors de flux de treball (Automatic Translation)
 x-item={0} Elements
 x-items={0} Elements
