--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_cs.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Doba trvání je vyžadován. (Automatic Translation)
 a-name-is-required=Je požadován název. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA se stejným názvem již existuje. (Automatic Translation)
+check-sla-job-interval=Zkontrolujte Interval úlohy SLA (Automatic Translation)
+check-sla-job-interval-description=Nastavte interval úlohy v minutách. (Automatic Translation)
 entries=Položky (Automatic Translation)
 items=Položky (Automatic Translation)
 metrics=Metriky (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Název procesu (Automatic Translation)
 search-for=Hledat... (Automatic Translation)
 showing=Zobrazeno (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Pracovní interval musí být větší než 0. (Automatic Translation)
 total-open=Celkový počet otevřených (Automatic Translation)
+workflow-metrics-configuration-name=Metrik pracovních postupů (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
