--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_el.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_el.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Απαιτείται μια χρονική διάρκεια. (Automatic Translation)
 a-name-is-required=Απαιτείται ένα όνομα. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Μια SLA με το ίδιο όνομα υπάρχει ήδη. (Automatic Translation)
+check-sla-job-interval=Ελέγξτε SLA δουλειά διάστημα (Automatic Translation)
+check-sla-job-interval-description=Για να ορίσετε το διάστημα δουλειά μέσα σε λίγα λεπτά. (Automatic Translation)
 entries=Καταχωρήσεις (Automatic Translation)
 items=Στοιχεία (Automatic Translation)
 metrics=Μετρήσεις (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Όνομα διεργασίας (Automatic Translation)
 search-for=Αναζήτηση για... (Automatic Translation)
 showing=Προβολή (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Το χρονικό διάστημα της εργασίας πρέπει να είναι μεγαλύτερη από 0. (Automatic Translation)
 total-open=Συνολικό άνοιγμα (Automatic Translation)
+workflow-metrics-configuration-name=Μετρήσεις ροής εργασίας (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
