--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_en.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_en.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=A duration time is required.
 a-name-is-required=A name is required.
 an-sla-with-the-same-name-already-exists=An SLA with the same name already exists.
+check-sla-job-interval=Check SLA Job Interval
+check-sla-job-interval-description=Set the job interval in minutes.
 entries=Entries
 items=Items
 metrics=Metrics
@@ -16,6 +18,8 @@ process-name=Process Name
 search-for=Search for...
 showing=Showing
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries.
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0.
 total-open=Total Open
+workflow-metrics-configuration-name=Workflow Metrics
 x-item={0} Item
 x-items={0} Items
