--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Es necesario especificar una duración.
 a-name-is-required=Es necesario especificar un nombre.
 an-sla-with-the-same-name-already-exists=Ya existe un SLA con el mismo nombre.
+check-sla-job-interval=Compruebe el intervalo de trabajo de SLA (Automatic Translation)
+check-sla-job-interval-description=Establecer el intervalo de trabajo en minutos. (Automatic Translation)
 entries=Entradas
 items=Elementos
 metrics=Métricas
@@ -16,6 +18,8 @@ process-name=Nombre del proceso
 search-for=Buscar…
 showing=Mostrando
 showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
+the-job-interval-must-be-greater-than-0=El intervalo de trabajo debe ser mayor que 0. (Automatic Translation)
 total-open=Total abiertos
+workflow-metrics-configuration-name=Mediciones de flujo de trabajo (Automatic Translation)
 x-item={0} Elemento
 x-items={0} Elementos
