--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fa.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=مدت زمان مورد نیاز است. (Automatic Translation)
 a-name-is-required=نام مورد نیاز است. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=انجمن گفتگوی با همین نام از قبل وجود دارد. (Automatic Translation)
+check-sla-job-interval=بررسی فاصله کار انجمن گفتگوی (Automatic Translation)
+check-sla-job-interval-description=تنظیم فاصله کار در عرض چند دقیقه. (Automatic Translation)
 entries=نوشته های (Automatic Translation)
 items=موارد (Automatic Translation)
 metrics=متریک (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=نمايش (Automatic Translation)
 search-for=جستجو برای... (Automatic Translation)
 showing=نمایش (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=فاصله کار باید بزرگتر از 0 باشد. (Automatic Translation)
 total-open=کل باز (Automatic Translation)
+workflow-metrics-configuration-name=معیارهای گردش کار (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
