--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Kestoaika on pakollinen.
 a-name-is-required=Nimi on pakollinen.
 an-sla-with-the-same-name-already-exists=Saman niminen SLA on jo olemassa.
+check-sla-job-interval=Check SLA Job Interval (Automatic Copy)
+check-sla-job-interval-description=Set the job interval in minutes. (Automatic Copy)
 entries=Merkintää
 items=Tuotteet
 metrics=Metriikat
@@ -16,6 +18,8 @@ process-name=Prosessin Nimi
 search-for=Etsi...
 showing=Näytetään
 showing-x-to-x-of-x-entries=Näytetään {0} - {1} yhteensä {2} merkinnästä.
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0. (Automatic Copy)
 total-open=Auki Yhteensä
+workflow-metrics-configuration-name=Workflow Metrics (Automatic Copy)
 x-item={0} Tuote
 x-items={0} Tuotetta
