--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Une durée est requise.
 a-name-is-required=Un nom est requis.
 an-sla-with-the-same-name-already-exists=Un SLA porte déjà ce nom.
+check-sla-job-interval=Vérifier l'intervalle de travail SLA (Automatic Translation)
+check-sla-job-interval-description=Définissez l'intervalle de travail en quelques minutes. (Automatic Translation)
 entries=Entrées
 items=Articles
 metrics=Métriques
@@ -16,6 +18,8 @@ process-name=Nom du processus
 search-for=Rechercher...
 showing=Affichage
 showing-x-to-x-of-x-entries=Affichage de {0} à {1} entrées sur {2}.
+the-job-interval-must-be-greater-than-0=L'intervalle de travail doit être supérieure à 0. (Automatic Translation)
 total-open=Total ouvert
+workflow-metrics-configuration-name=Paramètres de flux de travail (Automatic Translation)
 x-item={0} Article
 x-items={0} Articles
