--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=एक अवधि समय की आवश्यकता है । (Automatic Translation)
 a-name-is-required=एक नाम की आवश्यकता है । (Automatic Translation)
 an-sla-with-the-same-name-already-exists=समान नाम वाला SLA पहले से मौजूद है. (Automatic Translation)
+check-sla-job-interval=SLA कार्य अंतराल जांचें (Automatic Translation)
+check-sla-job-interval-description=कार्य अंतराल को मिनटों में सेट करें । (Automatic Translation)
 entries=प्रविष्टियों (Automatic Translation)
 items=आइटम (Automatic Translation)
 metrics=मैट्रिक्स (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=प्रक्रिया का नाम (Automatic Translation
 search-for=खोज के लिए.. । (Automatic Translation)
 showing=इस (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=कार्य अंतराल 0 से अधिक होना आवश्यक है । (Automatic Translation)
 total-open=कुल खुला (Automatic Translation)
+workflow-metrics-configuration-name=कार्यप्रवाह मीट्रिक (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
