--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Az időtartam ideje kötelező.
 a-name-is-required=A név kötelező.
 an-sla-with-the-same-name-already-exists=Egy ilyen nevű SLA már létezik.
+check-sla-job-interval=Ellenőrizze a SLA munkát intervallum (Automatic Translation)
+check-sla-job-interval-description=A munka intervallum beállítása percek alatt. (Automatic Translation)
 entries=Bejegyzések
 items=Elemek
 metrics=Mérési adatok
@@ -16,6 +18,8 @@ process-name=Eljárás neve
 search-for=Keresés...
 showing=Megjelenítve
 showing-x-to-x-of-x-entries=Megjelenítve {0} - {1} / {2} bejegyzésből.
+the-job-interval-must-be-greater-than-0=A munka időközének 0-nál nagyobbnak kell lennie. (Automatic Translation)
 total-open=Nyitottak összesen
+workflow-metrics-configuration-name=Munkafolyamat-mutatók (Automatic Translation)
 x-item={0} Elem
 x-items={0} Elem
