--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_in.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_in.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Durasi waktu diperlukan. (Automatic Translation)
 a-name-is-required=Nama diperlukan. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA dengan nama yang sama sudah ada. (Automatic Translation)
+check-sla-job-interval=Periksa SLA pekerjaan Interval (Automatic Translation)
+check-sla-job-interval-description=Mengatur interval pekerjaan dalam menit. (Automatic Translation)
 entries=Entri (Automatic Translation)
 items=Item (Automatic Translation)
 metrics=Metrik (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Nama proses (Automatic Translation)
 search-for=Pencarian untuk... (Automatic Translation)
 showing=Menampilkan (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Interval pekerjaan harus lebih besar dari 0. (Automatic Translation)
 total-open=Total terbuka (Automatic Translation)
+workflow-metrics-configuration-name=Alur kerja metrik (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
