--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_it.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_it.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=È necessario un tempo di durata. (Automatic Translation)
 a-name-is-required=È richiesto un nome. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Un contratto di servizio con lo stesso nome esiste già. (Automatic Translation)
+check-sla-job-interval=Controllare l'intervallo di lavoro SLA (Automatic Translation)
+check-sla-job-interval-description=Impostare l'intervallo di lavoro in minuti. (Automatic Translation)
 entries=Voci (Automatic Translation)
 items=Elementi (Automatic Translation)
 metrics=Metriche (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Nome del processo (Automatic Translation)
 search-for=Ricerca per... (Automatic Translation)
 showing=Risultati (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=L'intervallo di lavoro deve essere maggiore di 0. (Automatic Translation)
 total-open=Totale Open (Automatic Translation)
+workflow-metrics-configuration-name=Metriche del flusso di lavoro (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
