--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_iw.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=משך זמן נדרש. (Automatic Translation)
 a-name-is-required=שם נדרש. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA בעלי שם זהה כבר קיים. (Automatic Translation)
+check-sla-job-interval=בדוק מרווח עבודה SLA (Automatic Translation)
+check-sla-job-interval-description=להגדיר את מרווח הזמן של עבודה תוך דקות. (Automatic Translation)
 entries=ערכי (Automatic Translation)
 items=פריטים (Automatic Translation)
 metrics=מדדים (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=שם התהליך (Automatic Translation)
 search-for=החיפוש אחר... (Automatic Translation)
 showing=מציג (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=המשימה למרווח חייב להיות גדול מ- 0. (Automatic Translation)
 total-open=פתוח הכולל (Automatic Translation)
+workflow-metrics-configuration-name=זרימת העבודה מדדים (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
