--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=持続時間は必須です。
 a-name-is-required=名前は必須です。
 an-sla-with-the-same-name-already-exists=同じ名前のSLAがすでに存在します。
+check-sla-job-interval=Check SLA Job Interval (Automatic Copy)
+check-sla-job-interval-description=Set the job interval in minutes. (Automatic Copy)
 entries=エントリー
 items=商品
 metrics=統計情報
@@ -16,6 +18,8 @@ process-name=プロセス名
 search-for=検索...
 showing=表示しています
 showing-x-to-x-of-x-entries={2} エントリーのうち {0} 件から {1} 件を表示しています。
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0. (Automatic Copy)
 total-open=合計オープン数
+workflow-metrics-configuration-name=Workflow Metrics (Automatic Copy)
 x-item={0} 個の商品
 x-items={0} 個の商品
