--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ko.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=기간 시간이 필요 합니다. (Automatic Translation)
 a-name-is-required=이름이 필요 합니다. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=이름이 같은 SLA 이미 존재합니다. (Automatic Translation)
+check-sla-job-interval=SLA 작업 간격을 확인 (Automatic Translation)
+check-sla-job-interval-description=분에 작업 간격을 설정 합니다. (Automatic Translation)
 entries=항목 (Automatic Translation)
 items=항목 (Automatic Translation)
 metrics=통계 (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=프로세스 이름 (Automatic Translation)
 search-for=에 대 한 검색... (Automatic Translation)
 showing=표시 (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=작업 간격 0 보다 커야 합니다. (Automatic Translation)
 total-open=총 오픈 (Automatic Translation)
+workflow-metrics-configuration-name=워크플로 메트릭 (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
