--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Een duur is verplicht.
 a-name-is-required=Een naam is verplicht.
 an-sla-with-the-same-name-already-exists=Er bestaat al een SLA met dezelfde naam.
+check-sla-job-interval=Check SLA Job Interval (Automatic Copy)
+check-sla-job-interval-description=Set the job interval in minutes. (Automatic Copy)
 entries=Invoer
 items=Items
 metrics=Meetwaarden
@@ -16,6 +18,8 @@ process-name=Naam proces
 search-for=Zoeken naar ...
 showing=Weergave
 showing-x-to-x-of-x-entries=Weergave van {0} tot {1} van {2} invoeren.
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0. (Automatic Copy)
 total-open=Totaal open
+workflow-metrics-configuration-name=Workflow Metrics (Automatic Copy)
 x-item={0} item
 x-items={0} items
