--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pl.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Czas trwania jest wymagane. (Automatic Translation)
 a-name-is-required=Nazwa jest wymagana. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Umowy SLA o tej samej nazwie już istnieje. (Automatic Translation)
+check-sla-job-interval=Zaznacz interwał zadanie SLA (Automatic Translation)
+check-sla-job-interval-description=Ustaw interwał zadanie w minutach. (Automatic Translation)
 entries=Wpisy (Automatic Translation)
 items=Elementy (Automatic Translation)
 metrics=Metryki (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Nazwa procesu (Automatic Translation)
 search-for=Szukaj... (Automatic Translation)
 showing=Wyświetlono (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Interwał zadanie musi być większa niż 0. (Automatic Translation)
 total-open=Otwórz łącznych (Automatic Translation)
+workflow-metrics-configuration-name=Wskaźniki przepływu pracy (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
