--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Tempo de duração necessário.
 a-name-is-required=Nome necessário.
 an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe.
+check-sla-job-interval=Verificar o intervalo de trabalho de SLA (Automatic Translation)
+check-sla-job-interval-description=Defina o intervalo de trabalho em minutos. (Automatic Translation)
 entries=Entradas
 items=Itens
 metrics=Métricas
@@ -16,6 +18,8 @@ process-name=Nome do processo
 search-for=Procurar por...
 showing=Mostrando
 showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
+the-job-interval-must-be-greater-than-0=O intervalo de trabalho deve ser maior que 0. (Automatic Translation)
 total-open=Total aberto
+workflow-metrics-configuration-name=Métricas de fluxo de trabalho (Automatic Translation)
 x-item={0} Item
 x-items={0} Itens
