--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ro.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=O durata de timp este necesar. (Automatic Translation)
 a-name-is-required=Un nume este necesară. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=O SLA cu acelaşi nume există deja. (Automatic Translation)
+check-sla-job-interval=Verificaţi intervalul de Job SLA (Automatic Translation)
+check-sla-job-interval-description=Setaţi intervalul de job în câteva minute. (Automatic Translation)
 entries=Intrări (Automatic Translation)
 items=Elemente (Automatic Translation)
 metrics=Măsurătorile (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Nume de proces (Automatic Translation)
 search-for=Cauta... (Automatic Translation)
 showing=Care prezintă (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Intervalul de job trebuie să fie mai mare decât 0. (Automatic Translation)
 total-open=Total deschis (Automatic Translation)
+workflow-metrics-configuration-name=Măsurătorile de flux de lucru (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
