--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ru.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Продолжительность времени не требуется. (Automatic Translation)
 a-name-is-required=Имя является обязательным. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=ОАС с тем же именем уже существует. (Automatic Translation)
+check-sla-job-interval=Проверьте интервал задания ОАС (Automatic Translation)
+check-sla-job-interval-description=Установите интервал задания в минутах. (Automatic Translation)
 entries=Записи (Automatic Translation)
 items=Элементы (Automatic Translation)
 metrics=Метрики (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Имя процесса (Automatic Translation)
 search-for=Поиск по... (Automatic Translation)
 showing=Показаны (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Интервал задания должны быть больше 0. (Automatic Translation)
 total-open=Полного Открытый (Automatic Translation)
+workflow-metrics-configuration-name=Метрик рабочих процессов (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
