--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sk.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Čas trvania je potrebné. (Automatic Translation)
 a-name-is-required=Meno je povinné. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA s rovnakým názvom už existuje. (Automatic Translation)
+check-sla-job-interval=Kontrolovať SLA prácu Interval (Automatic Translation)
+check-sla-job-interval-description=Nastaviť prácu interval v minútach. (Automatic Translation)
 entries=Položky (Automatic Translation)
 items=Položky (Automatic Translation)
 metrics=Metriky (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Názov procesu (Automatic Translation)
 search-for=Hľadanie... (Automatic Translation)
 showing=Zobrazuje sa (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Interval úlohy musí byť väčšia ako 0. (Automatic Translation)
 total-open=Celkom otvorené (Automatic Translation)
+workflow-metrics-configuration-name=Workflow metriky (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
