--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sl.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Čas trajanja je potrebno. (Automatic Translation)
 a-name-is-required=Ime je potrebno. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA z istim imenom že obstaja. (Automatic Translation)
+check-sla-job-interval=Preverite SLA delo Interval (Automatic Translation)
+check-sla-job-interval-description=Želite delo interval v minutah. (Automatic Translation)
 entries=Postavke (Automatic Translation)
 items=Elementi (Automatic Translation)
 metrics=Meritve (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Ime procesa (Automatic Translation)
 search-for=Iskanje... (Automatic Translation)
 showing=Ki prikazuje (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Delo interval mora biti večja od 0. (Automatic Translation)
 total-open=Skupni plan (Automatic Translation)
+workflow-metrics-configuration-name=Potek dela meritve (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
