--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Varaktighet krävs.
 a-name-is-required=Ett namn krävs.
 an-sla-with-the-same-name-already-exists=Det finns redan en SLA med det namnet.
+check-sla-job-interval=Check SLA Job Interval (Automatic Copy)
+check-sla-job-interval-description=Set the job interval in minutes. (Automatic Copy)
 entries=Poster
 items=Föremål
 metrics=Mätvärden
@@ -16,6 +18,8 @@ process-name=Processnamn
 search-for=Sök efter...
 showing=Visar
 showing-x-to-x-of-x-entries=Visar {0} för {1} av {2} poster.
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0. (Automatic Copy)
 total-open=Antal öppna
+workflow-metrics-configuration-name=Workflow Metrics (Automatic Copy)
 x-item={0} Föremål
 x-items={0} Föremål
