--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_th.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_th.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=จำเป็นต้องมีระยะเวลา (Automatic Translation)
 a-name-is-required=ชื่อถูกต้อง (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA ด้วยชื่อเดียวกันอยู่แล้ว (Automatic Translation)
+check-sla-job-interval=ตรวจสอบช่วงเวลางาน SLA (Automatic Translation)
+check-sla-job-interval-description=กำหนดงานช่วงนาทีที่แล้ว (Automatic Translation)
 entries=รายการ (Automatic Translation)
 items=รายการ (Automatic Translation)
 metrics=ตัวชี้วัด (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=ชื่อกระบวนการ (Automatic Translation)
 search-for=ค้นหา... (Automatic Translation)
 showing=แสดง (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=งานช่วงเวลาต้องมากกว่า 0 (Automatic Translation)
 total-open=เปิดทั้งหมด (Automatic Translation)
+workflow-metrics-configuration-name=การวัดกระแส (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
