--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_uk.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Тривалість часу не потрібно. (Automatic Translation)
 a-name-is-required=Ім'я вимагається. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA із таким іменем уже існує. (Automatic Translation)
+check-sla-job-interval=Перевірити роботу SLA інтервал (Automatic Translation)
+check-sla-job-interval-description=Встановити інтервал роботу в лічені хвилини. (Automatic Translation)
 entries=Записи (Automatic Translation)
 items=Елементи (Automatic Translation)
 metrics=Метрики (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Ім'я процесу (Automatic Translation)
 search-for=Шукати... (Automatic Translation)
 showing=Показ (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Інтервал робота має бути більшим за 0. (Automatic Translation)
 total-open=Загальна відкритим (Automatic Translation)
+workflow-metrics-configuration-name=Робочий процес метрики (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
