--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=持续时间为必填项。
 a-name-is-required=名称为必填项。
 an-sla-with-the-same-name-already-exists=已存在名称相同的服务水平协议。
+check-sla-job-interval=检查 sla 作业间隔 (Automatic Translation)
+check-sla-job-interval-description=以分钟为单位设置作业间隔。 (Automatic Translation)
 entries=条目
 items=项
 metrics=指标
@@ -16,6 +18,8 @@ process-name=进程名称
 search-for=搜索…
 showing=正在显示
 showing-x-to-x-of-x-entries=正在显示第 {0} - {1} 个条目，共 {2} 个。
+the-job-interval-must-be-greater-than-0=作业间隔必须大于0。 (Automatic Translation)
 total-open=打开总计
+workflow-metrics-configuration-name=工作流指标 (Automatic Translation)
 x-item={0} 项
 x-items={0} 项
