--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_et.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_et.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Kestus aega kulub. (Automatic Translation)
 a-name-is-required=Nimi on nõutav. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA sama nimega on juba olemas. (Automatic Translation)
+check-sla-job-interval=Kontrollige SLA printeritööde intervalli (Automatic Translation)
+check-sla-job-interval-description=Määrata töö intervalli minutites. (Automatic Translation)
 entries=Kanded (Automatic Translation)
 items=Üksused (Automatic Translation)
 metrics=Mõõdikud (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Protsessi nimi (Automatic Translation)
 search-for=Otsi... (Automatic Translation)
 showing=Nähtaval (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Töö intervall peab olema suurem kui 0. (Automatic Translation)
 total-open=Kokku avatud (Automatic Translation)
+workflow-metrics-configuration-name=Töövoo mõõdikud (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
