--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_eu.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=A duration time is required. (Automatic Copy)
 a-name-is-required=A name is required. (Automatic Copy)
 an-sla-with-the-same-name-already-exists=An SLA with the same name already exists. (Automatic Copy)
+check-sla-job-interval=Check SLA Job Interval (Automatic Copy)
+check-sla-job-interval-description=Set the job interval in minutes. (Automatic Copy)
 entries=Entries (Automatic Copy)
 items=Items (Automatic Copy)
 metrics=Metrics (Automatic Copy)
@@ -16,6 +18,8 @@ process-name=Process Name (Automatic Copy)
 search-for=Search for... (Automatic Copy)
 showing=Showing (Automatic Copy)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=The job interval must be greater than 0. (Automatic Copy)
 total-open=Total Open (Automatic Copy)
+workflow-metrics-configuration-name=Workflow Metrics (Automatic Copy)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
