--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_lt.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Yra laikas, reikalingas. (Automatic Translation)
 a-name-is-required=Vardas yra būtinas. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Su SLA tokiu pačiu pavadinimu jau yra. (Automatic Translation)
+check-sla-job-interval=Patikrinkite, ar SLA darbo intervalo (Automatic Translation)
+check-sla-job-interval-description=Nustatyti darbo intervalas minutėmis. (Automatic Translation)
 entries=Įrašai (Automatic Translation)
 items=Elementai (Automatic Translation)
 metrics=Metrika (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Proceso pavadinimas (Automatic Translation)
 search-for=Paieška... (Automatic Translation)
 showing=Rodo (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Darbo laiko tarpas turi būti didesnis už 0. (Automatic Translation)
 total-open=Visos atviros (Automatic Translation)
+workflow-metrics-configuration-name=Darbo eigos metrika (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
