--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nb.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Det kreves en varigheten. (Automatic Translation)
 a-name-is-required=Det kreves et navn. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=En SERVICENIVÅAVTALE med samme navn finnes allerede. (Automatic Translation)
+check-sla-job-interval=Sjekke SLA jobb intervall (Automatic Translation)
+check-sla-job-interval-description=Angi jobb intervallet i minutter. (Automatic Translation)
 entries=Oppføringer (Automatic Translation)
 items=Elementer (Automatic Translation)
 metrics=Beregninger (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Prosessnavnet (Automatic Translation)
 search-for=Søk etter... (Automatic Translation)
 showing=Viser (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Jobb intervallet må være større enn 0. (Automatic Translation)
 total-open=Totalt åpen (Automatic Translation)
+workflow-metrics-configuration-name=Arbeidsflyt beregninger (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
