--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=É necessário um tempo de duração. (Automatic Translation)
 a-name-is-required=Um nome é necessário. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe. (Automatic Translation)
+check-sla-job-interval=Verificar o intervalo de trabalho de SLA (Automatic Translation)
+check-sla-job-interval-description=Defina o intervalo de trabalho em minutos. (Automatic Translation)
 entries=Entries (Automatic Copy)
 items=Items (Automatic Copy)
 metrics=Métricas de (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Process Name (Automatic Copy)
 search-for=Procurar por... (Automatic Translation)
 showing=Showing (Automatic Copy)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=O intervalo de trabalho deve ser maior que 0. (Automatic Translation)
 total-open=Total Open (Automatic Copy)
+workflow-metrics-configuration-name=Métricas de fluxo de trabalho (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
