--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_tr.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Bir süre zaman gereklidir. (Automatic Translation)
 a-name-is-required=Bir adı gereklidir. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Bir SLA aynı adla zaten var. (Automatic Translation)
+check-sla-job-interval=SLA iş aralığı kontrol (Automatic Translation)
+check-sla-job-interval-description=İş aralığı dakika olarak ayarlayın. (Automatic Translation)
 entries=Girişleri (Automatic Translation)
 items=Öğeleri (Automatic Translation)
 metrics=Ölçümleri (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=İşlem adı (Automatic Translation)
 search-for=Arama için... (Automatic Translation)
 showing=Gösterilen (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=İş aralığı 0'dan büyük olmalıdır. (Automatic Translation)
 total-open=Toplam açık (Automatic Translation)
+workflow-metrics-configuration-name=İş akışı ölçümleri (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
