--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_vi.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=Một thời gian thời gian là cần thiết. (Automatic Translation)
 a-name-is-required=Tên là bắt buộc. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Một SLA có cùng tên đã tồn tại. (Automatic Translation)
+check-sla-job-interval=Kiểm tra xem khoảng thời gian công việc SLA (Automatic Translation)
+check-sla-job-interval-description=Thiết lập khoảng thời gian công việc trong vài phút. (Automatic Translation)
 entries=Mục (Automatic Translation)
 items=Khoản mục (Automatic Translation)
 metrics=Số liệu (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=Quá trình tên (Automatic Translation)
 search-for=Tìm kiếm... (Automatic Translation)
 showing=Đang hiển thị (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=Khoảng thời gian công việc phải lớn hơn 0. (Automatic Translation)
 total-open=Mở tất cả (Automatic Translation)
+workflow-metrics-configuration-name=Số liệu công việc (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
