--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1,6 +1,8 @@
 a-duration-time-is-required=持續時間是必需的。 (Automatic Translation)
 a-name-is-required=名稱是必需的。 (Automatic Translation)
 an-sla-with-the-same-name-already-exists=具有相同名稱的 sla 已存在。 (Automatic Translation)
+check-sla-job-interval=檢查 sla 作業間隔 (Automatic Translation)
+check-sla-job-interval-description=以分鐘為單位設置作業間隔。 (Automatic Translation)
 entries=條目 (Automatic Translation)
 items=專案 (Automatic Translation)
 metrics=指標 (Automatic Translation)
@@ -16,6 +18,8 @@ process-name=進程名稱 (Automatic Translation)
 search-for=搜索..。 (Automatic Translation)
 showing=顯示 (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+the-job-interval-must-be-greater-than-0=作業間隔必須大於0。 (Automatic Translation)
 total-open=開盤總冠軍 (Automatic Translation)
+workflow-metrics-configuration-name=工作流指標 (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
